<resources>
    <string name="app_name">New To HK</string>
    <string name="app_intro">欢迎来到香港</string>
    <string name="app_right">EE5415</string>
    <string name="exit_tip">再按一次退出</string>
    <string name="wait_text">请稍后…</string>
    <string name="MYusername">请登录</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="username_text">用户名：</string>
    <string name="username_text_hint">请输入用户名</string>
    <string name="password_text">密码：  </string>
    <string name="password_text_hint">请输入密码</string>
    <string name="nickname_text">昵称：</string>
    <string name="nickname_text_hint">请输入昵称</string>
    <string name="login_btn_text">忘记密码</string>
    <string name="register_btn_text">注册</string>
    <string name="register_success_text">注册成功，现在你可以登录啦</string>
    <string name="register_failed_text">注册失败</string>
    <string name="login_failed_text">登录失败</string>
    <string name="logout_btn_text">登出</string>
    <string name="forgot_password_btn">忘记密码</string>
    <string name="notification_btn">消息通知</string>
    <string name="change_password_btn">修改密码</string>
    <string name="about_us_btn">关于我们</string>
    <string name="good_comment_btn">给个好评</string>
    <string name="software_version_btn">软件版本</string>
    <string name="sign_out_btn">退出登录</string>
    <string name="local_btn">Local Food</string>
    <string name="cn_btn">Chinese Food</string>
    <string name="west_btn">Western Food</string>
    <string name="jk_btn">Japanese Food</string>
    <string name="southeast_btn">Southeast Food</string>
    <string name="xinxing_btn">Xinxing restaurant</string>
    <string name="charsiu_btn">the one charsiu</string>
    <string name="aozhou_btn">Australian Dairy company</string>
    <string name="wingnin_btn">Wingnin restaurant</string>
    <string name="xinxing_text">Kennedy Town/Dim sum/＄50-100</string>
    <string name="charsiu_text">Tai Wai/Roasted meat/＄100-150</string>
    <string name="aozhou_text">Jordan/Afternoon Tea/＄50-100</string>
    <string name="wingnin_text">Sha Tin/Noodles/＄100-200</string>
    <string name="xinxingdetail_text">Kennedy Town/Dim sum/＄50-100</string>
    <string name="xinxingtime_text">OPENING:03:00-16:00,everyday</string>
    <string name="xinxingphone_text">NUMBER:+852-28160616</string>
    <string name="xinxingadd_text">ADDRESS:Shop C,G/F,No.8 Smithfield Road,Kennedy Town,Western District</string>
    <string name="xinxingdish_text">Signature dish:</string>
    <string name="xinxingpay_text">PAYMENT:Alipay,Wechat,Octopus,Cash</string>
    <string name="xinxingname_text">Xinxing Restaurant</string>
    <string name="xinxingdish2_text">Fried milk</string>
    <string name="xinxingdish3_text">Curry tripe</string>
    <string name="xinxingrate_text">Welcome to rate!</string>
    <string name="xinxingdish1_text">Har gow</string>
    <string name="xiangshu_btn">xiangshu restaurant</string>
    <string name="xiji_btn">xiji restaurant</string>
    <string name="siji_btn">Four seasons</string>
    <string name="jibao_btn">jibao lazy pot</string>
    <string name="xiangshu_text">Wan Chai/Si-Chuan style/＄100-200</string>
    <string name="xiji_text">Wan Chai/Seafood/＄100-200</string>
    <string name="siji_text">Sha Tin/Traditinal/＄100-200</string>
    <string name="jibao_text">Mong Kok/Hot pot/＄200-400</string>
    <string name="xiangshudetail_text">Wan Chai/Si-Chuan style/＄100-200</string>
    <string name="xiangshutime_text">OPENING:11:00-15:30,17:30-22:00,everyday</string>
    <string name="xiangshuphone_text">NUMBER:+852-23809688</string>
    <string name="xiangshuadd_text">ADDRESS:Shop 218,2nd Floor,181 Johnston Road,Wan Chai</string>
    <string name="xiangshudish_text">Signature dish:</string>
    <string name="xiangshupay_text">PAYMENT:Visa,Master,Union pay,Cash</string>
    <string name="xiangshuname_text">Xiangshu Restaurant</string>
    <string name="xiangshudish2_text">Hot Chili Oil Fish</string>
    <string name="xiangshudish3_text">Chili Dumpling</string>
    <string name="xiangshurate_text">Welcome to rate!</string>
    <string name="xiangshudish1_text">Hot Chili Oil Beef</string>
    <string name="park">Park</string>
    <string name="hiking">Hiking</string>
    <string name="island">island</string>
    <string name="scenery">scenery</string>
    <string name="disney">Disneyland</string>
    <string name="ocean">Ocean Park</string>
    <string name="hk">Hong Kong Park</string>
    <string name="nanlian">Nanlian Garden</string>
    <string name="disneytext">Lantau Island/Amusement/＄500-1000</string>
    <string name="oceantext">Wong Chuk Hang/Amusement/＄300-600</string>
    <string name="hktext">Central/Nature/Free</string>
    <string name="nanlliantext">Kwun Tong/Nature/Free</string>
    <string name="playbtn">Watch</string>
    <string name="disneyname">Disneyland</string>
    <string name="disneydetail">Lantau Island/Amusement/＄500-1000</string>
    <string name="moreinfo">MOREINFO:Hong Kong Disneyland is divided into 7 theme parks, which are Main Street, Adventure World, Fantasy World, Tomorrowland, Toy Story Base, Grizzly Valley and Blurred Manor, the park presents a parade and fireworks display every evening."</string>
    <string name="website">HOMEPAGE:www.hongkongdisneyland.com</string>
    <string name="disneyadd">ADDRESS:Chu Hao Wan, Lantau Island, New Territories</string>
    <string name="disneytime">OPENNING:Everyday except Tuesday and Thursday</string>
    <string name="mailihaojing">Maclehose Trail</string>
    <string name="taipingshan">Victoria Peak</string>
    <string name="dayushan">Lantau Mountain</string>
    <string name="shizishan">Lion Rock</string>
    <string name="mailihaojingtext">New Territories/Walk/Free</string>
    <string name="taipingshantext">Central/Tram/＄50-200</string>
    <string name="dayushantext">Lantau/Tram/＄50-150</string>
    <string name="shizishantext">Tai Wai/walk/Free</string>
    <string name="playbtn1">Watch</string>
    <string name="mailihaojingname">Maclehose Trail</string>
    <string name="mailihaojingdetail">New Territories/Walk/Free</string>
    <string name="mailihaojinginfo">MOREINFO:The MacLehose Trail is 100 km long. It is divided into ten paragraphs. The MacLehose Trail has a wide range of scenic spots, such as the 420-meter Cow Ear Stone Hill, 702 meter Ma On Shan, 649 meter Grass Hill and 957 meter Tai Mo Shan.</string>
    <string name="attention">ATTENTION:Hong Kong emergency call: 999!</string>
    <string name="mailihaojingadd">ADDRESS:Starting from Pak Tam Chung and ending in Tuen Mun.</string>
    <string name="mailihaojingtime">OPENNING:Everyday.Be careful when hiking in the wild.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string-array name="countries_array">
        <item>学生签证如何申请？小编带你早看早知道！</item>
        <item>震惊！申上一所港校等于申上八所？快来看看是怎么一回事！</item>
        <item>赴港留学怎样才能拿下属于自己的身份证？</item>
        <item>疫情过后的当下通关政策如何？</item>
        <item>港校申到就是赚到！留学一次回到内地竟有这么多的优惠政策！</item>
        <item>毕业想留港，如何续签证？小编带你看！</item>
        <item>去香港留学，别忘了办理香港八达通卡！方便又省钱！</item>
        <item>香港留学生如何办理银行卡？实用到爆！快来看看吧！</item>
    </string-array>
</resources>