<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".parklist">

    <ImageView
        android:id="@+id/ocean"
        android:layout_width="111dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toTopOf="@+id/hk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874"
        app:srcCompat="@drawable/ocean" />

    <ImageView
        android:id="@+id/disney"
        android:layout_width="112dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toTopOf="@+id/ocean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        app:srcCompat="@drawable/disney" />

    <Button
        android:id="@+id/ocean_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocean"
        app:layout_constraintBottom_toTopOf="@+id/oceantext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <TextView
        android:id="@+id/oceantext"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:text="@string/oceantext"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/hk_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/hktext"
        android:layout_width="235dp"
        android:layout_height="32dp"
        android:text="@string/hktext"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/nanlian_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/hk_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hk"
        app:layout_constraintBottom_toTopOf="@+id/hktext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/disneytext"
        android:layout_width="228dp"
        android:layout_height="43dp"
        android:text="@string/disneytext"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/ocean_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <Button
        android:id="@+id/disney_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disney"
        app:layout_constraintBottom_toTopOf="@+id/disneytext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.599"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <ImageView
        android:id="@+id/hk"
        android:layout_width="108dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toTopOf="@+id/nanlian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        app:srcCompat="@drawable/hk" />

    <TextView
        android:id="@+id/nanliantext"
        android:layout_width="240dp"
        android:layout_height="54dp"
        android:text="@string/nanlliantext"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <ImageView
        android:id="@+id/nanlian"
        android:layout_width="111dp"
        android:layout_height="114dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        app:srcCompat="@drawable/nanlian" />

    <Button
        android:id="@+id/nanlian_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nanlian"
        app:layout_constraintBottom_toTopOf="@+id/nanliantext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

</androidx.constraintlayout.widget.ConstraintLayout>