<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chinesefood">

    <Button
        android:id="@+id/xiji_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiji_btn"
        app:layout_constraintBottom_toTopOf="@+id/xijitext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <ImageView
        android:id="@+id/xiangshu"
        android:layout_width="112dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toTopOf="@+id/xiji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:srcCompat="@drawable/xiangshu" />

    <ImageView
        android:id="@+id/siji"
        android:layout_width="108dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toTopOf="@+id/jibao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896"
        app:srcCompat="@drawable/siji" />

    <ImageView
        android:id="@+id/jibao"
        android:layout_width="111dp"
        android:layout_height="114dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:srcCompat="@drawable/jibao" />

    <TextView
        android:id="@+id/sijitext"
        android:layout_width="235dp"
        android:layout_height="32dp"
        android:text="@string/siji_text"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/jibao_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <TextView
        android:id="@+id/jibaotext"
        android:layout_width="240dp"
        android:layout_height="54dp"
        android:text="@string/jibao_text"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <ImageView
        android:id="@+id/xiji"
        android:layout_width="111dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toTopOf="@+id/siji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        app:srcCompat="@drawable/xiji" />

    <Button
        android:id="@+id/jibao_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jibao_btn"
        app:layout_constraintBottom_toTopOf="@+id/jibaotext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <TextView
        android:id="@+id/xiangshutext"
        android:layout_width="246dp"
        android:layout_height="34dp"
        android:text="@string/xiangshu_text"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/xiji_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <Button
        android:id="@+id/xiangshu_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiangshu_btn"
        app:layout_constraintBottom_toTopOf="@+id/xiangshutext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <TextView
        android:id="@+id/xijitext"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:text="@string/xiji_text"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/siji_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/siji_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siji_btn"
        app:layout_constraintBottom_toTopOf="@+id/sijitext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

</androidx.constraintlayout.widget.ConstraintLayout>