<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".localfoodlist">

    <Button
        android:id="@+id/charsiu_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charsiu_btn"
        app:layout_constraintBottom_toTopOf="@+id/charsiutext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <ImageView
        android:id="@+id/xinxin"
        android:layout_width="112dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toTopOf="@+id/charsiu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:srcCompat="@drawable/xinxin" />

    <ImageView
        android:id="@+id/aozhou"
        android:layout_width="108dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toTopOf="@+id/wingnin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896"
        app:srcCompat="@drawable/aozhou" />

    <ImageView
        android:id="@+id/wingnin"
        android:layout_width="111dp"
        android:layout_height="114dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:srcCompat="@drawable/wingnin" />

    <TextView
        android:id="@+id/aozhoutext"
        android:layout_width="235dp"
        android:layout_height="32dp"
        android:text="@string/aozhou_text"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/wingnin_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <TextView
        android:id="@+id/wingnintext"
        android:layout_width="240dp"
        android:layout_height="54dp"
        android:text="@string/wingnin_text"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <ImageView
        android:id="@+id/charsiu"
        android:layout_width="111dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toTopOf="@+id/aozhou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        app:srcCompat="@drawable/charsiu" />

    <Button
        android:id="@+id/wingnin_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wingnin_btn"
        app:layout_constraintBottom_toTopOf="@+id/wingnintext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983" />

    <TextView
        android:id="@+id/xinxingtext"
        android:layout_width="236dp"
        android:layout_height="36dp"
        android:text="@string/xinxing_text"
        app:layout_constraintBottom_toTopOf="@+id/charsiu_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/xinxing_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xinxing_btn"
        app:layout_constraintBottom_toTopOf="@+id/xinxingtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <TextView
        android:id="@+id/charsiutext"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:text="@string/charsiu_text"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/aozhou_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/aozhou_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aozhou_btn"
        app:layout_constraintBottom_toTopOf="@+id/aozhoutext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

</androidx.constraintlayout.widget.ConstraintLayout>